# medal-decompiler

./: Cargo.toml  Dockerfile  index.html  medal-x86_64-linux-musl  package.json  render.yaml  server.js
.cargo/: config.toml
.github/workflows/: release.yaml
medal/: Cargo.toml
medal/src/commands/: serve.rs
public/: index.html
