[workspace]
resolver = "2"  # Fixed: "3" is invalid, only "1" or "2" are valid
members = [
    "cfg",
    "ast",
    "lua51-lifter",
    "lua51-deserializer",
    "luau-lifter",
    "restructure",
    "luau-worker",
    "medal",
]

[workspace.package]
edition = "2021"  # Fixed: "2024" doesn't exist yet in Rust 1.75
authors = [
    "Mathias Pedersen <mathias.pedersen834@gmail.com>",
    "Jujhar Singh <jujharsmc@gmail.com>",
    "Amit Bashan <amit.bashan@icloud.com>",
    "Stefanuk12",
]

[profile.release]
debug = true
lto = true
