[workspace]
resolver = "2"
members = [
    "cfg",
    "ast",
    "lua51-lifter",
    "lua51-deserializer",
    "luau-lifter",
    "restructure",
    "luau-worker",
    "medal",
]

[workspace.package]
edition = "2021"
authors = [
    "Mathias Pedersen <mathias.pedersen834@gmail.com>",
    "Jujhar Singh <jujharsmc@gmail.com>",
    "Amit Bashan <amit.bashan@icloud.com>",
    "Stefanuk12",
]

# Allow nightly features
[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(nightly)'] }

[profile.release]
debug = true
lto = true
